--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
+  <title>Co's Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="mediaqueries.css">
 </head>
@@ -223,7 +223,7 @@
       </div>
       <div class="details-container color-container">
         <div class="article-container">
-          <img src="./assets/project-2.png" alt="Project 2" class="project-img">
+          <img src="./assets/pixly.jpg" alt="Project 2" class="project-img">
 
         </div>
         <h2 class="experience-sub-title project-title">React Pixly</h2>
@@ -232,7 +232,7 @@
           <button class="btn btn-color-2 project-btn" onclick="location.href='https:github.com/Coco-ha/react-pixly'">
             GitHub
           </button>
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https:github.com'">
+          <button class="btn btn-color-2 project-btn" onclick="location.href='https:cxh12pixly.surge.sh/'">
             Live Demo
           </button>
         </div>
