--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
       </div>
       <div id="socials-container">
         <img src="./assets/linkedin.png" alt="My linkedin Profile" class="icon" onclick="location.href='https:www.linkedin.com/in/co-ha-4a27a3293/'">
-        <img src="./assets/github.png" alt="My Github Profile" class="icon" onclick="location.href='https:Github.com/coco-ha'">
+        <!-- <img src="./assets/github.png"  alt="My Github Profile" class="icon" onclick="location.href='https:Github.com/coco-ha'"> -->
+        <a href="https://github.com/coco-ha" target="_blank">
+          <img src="./assets/github.png" alt="My Github Profile" class="icon">
+      </a>
       </div>
     </div>
   </section>
