--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
         </button>
       </div>
       <div id="socials-container">
-        <img src="./assets/linkedin.png" alt="My linkedin Profile" class="icon" onclick="location.href='https:www.linkedin.com/in/co-ha-4a27a3293/'">
-        <!-- <img src="./assets/github.png"  alt="My Github Profile" class="icon" onclick="location.href='https:Github.com/coco-ha'"> -->
+        <a href="https://www.linkedin.com/in/co-ha-4a27a3293/" target="_blank">
+          <img src="./assets/linkedin.png" alt="My linkedIn Profile" class="icon">
+        </a>
         <a href="https://github.com/coco-ha" target="_blank">
           <img src="./assets/github.png" alt="My Github Profile" class="icon">
       </a>
@@ -266,11 +267,15 @@
     <div class="contact-info-upper-container">
       <div class="contact-info-container">
         <img src="./assets/email.png" alt="email icon" class="icon contact-icon email-icon"/>
-        <p><a href="mailto:co.ha1408@gmail.com">co.ha1408@gmail.com</a></p>
+        <!-- <p><a href="mailto:co.ha1408@gmail.com">co.ha1408@gmail.com</a></p> -->
+        <p><a href="mailto:co.ha1408@gmail.com" class="email-link" id="contact-email">co.ha1408@gmail.com</a></p>
+
       </div>
       <div class="contact-info-container">
-        <img src="./assets/linkedin.png" alt="linkedin icon" class="icon contact-icon"/>
-        <p><a href="https:www.linkedin.com/in/co-ha-4a27a3293/">LinkedIn</a></p>
+       <img src="./assets/linkedin.png" alt="linkedin icon" class="icon contact-icon"/>
+        <!-- <p><a href="https:www.linkedin.com/in/co-ha-4a27a3293/">LinkedIn</a></p> -->
+        <p><a href="https://www.linkedin.com/in/co-ha-4a27a3293/" target="_blank">LinkedIn</a></p>
+      </a>
       </div>
     </div>
   </section>
