--- a/index.html
+++ b/index.html
@@ -217,12 +217,13 @@
         <h2 class="experience-sub-title project-title">Warbler</h2>
         <h4>Description: Replica of a social media site, where users can follow other users and post/like messages.</h4>
         <div class="btn-container">
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https:github.com/Coco-ha/Warbler-cxh'">
+          <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/Coco-ha/Warbler-cxh', '_blank');">
             GitHub
-          </button>
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https:warbler-cxh12.onrender.com'">
+        </button>
+          <button class="btn btn-color-2 project-btn" onclick="window.open('https://warbler-cxh12.onrender.com', '_blank');">
             Live Demo
-          </button>
+        </button>
+
         </div>
       </div>
       <div class="details-container color-container">
@@ -233,12 +234,18 @@
         <h2 class="experience-sub-title project-title">React Pixly</h2>
           <h4>Description: Uploads Image and stores metadata of photo (location of photo, mode, of camera, etc) and store it into the database</h4>
         <div class="btn-container">
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https:github.com/Coco-ha/react-pixly'">
+          <!-- <button class="btn btn-color-2 project-btn" onclick="location.href='https:github.com/Coco-ha/react-pixly'">
             GitHub
-          </button>
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https:cxh12pixly.surge.sh/'">
+          </button> -->
+          <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/Coco-ha/react-pixly', '_blank');">
+            GitHub
+        </button>
+        <button class="btn btn-color-2 project-btn" onclick="window.open('https://cxh12pixly.surge.sh', '_blank');">
+          Live Demo
+      </button>
+          <!-- <button class="btn btn-color-2 project-btn" onclick="location.href='https:cxh12pixly.surge.sh/'">
             Live Demo
-          </button>
+          </button> -->
         </div>
       </div>
       <div class="details-container color-container">
@@ -249,12 +256,18 @@
         <h2 class="experience-sub-title project-title">Jobly</h2>
         <h4>Description: Job listing single page React application for viewing and submitting job applications.</h4>
         <div class="btn-container">
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https:github.com/Coco-ha/jobly-cxh'">
+          <!-- <button class="btn btn-color-2 project-btn" onclick="location.href='https:github.com/Coco-ha/jobly-cxh'">
             GitHub
-          </button>
-          <button class="btn btn-color-2 project-btn" onclick="location.href='https:co-reactjoblyr32.surge.sh'">
+          </button> -->
+          <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/Coco-ha/jobly-cxh', '_blank');">
+            GitHub
+        </button>
+          <!-- <button class="btn btn-color-2 project-btn" onclick="location.href='https:co-reactjoblyr32.surge.sh'">
             Live Demo
-          </button>
+          </button> -->
+          <button class="btn btn-color-2 project-btn" onclick="window.open('https://co-reactjoblyr32.surge.sh', '_blank');">
+            Live Demo
+        </button>
         </div>
       </div>
     </div>
