--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h1 class="title">Co Ha</h1>
       <p class="section__text__p2">Software Developer with a love for healthcare, technology, and everything in between</p>
       <div class="btn-container">
-        <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">Download CV
+        <button class="btn btn-color-2" onclick="window.open('./assets/resume2023 pdf.pdf')">Download CV
         </button>
         <button class="btn btn-color-1" onclick="location.href='./#contacts'">Contact Info
         </button>
